--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,16 @@
 version: '3'
 services:
   web:
-    image: boost
+    image: mangoweb/boost
     container_name: boost-dev
     ports:
-     - "8080:8080"
+     - "80:8080"
     depends_on:
      - db
     links:
      - db
-  nginx:
-    image: nginx
-    ports:
-     - "90:8080"
-    environment:
-     - NGINX_HOST=appstorehq.net
-     - NGINX_PORT=90
-    depends_on:
-     - web
   db:
-    image: mongo
+    image: healthcheck/mongo
     command: mongod
+
+
