--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ jobs:
       - image: swift:4.0
     steps:
       - run: apt-get install -y libssl-dev
+      - run: apt-get install -y mysql-server
       - checkout
       - run: swift build
       - run: swift test
