--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 	"name": "Boost Enterprise AppStore",
 	"description": "Enterprise appstore for easy project deployment",
 	"repository": "https://github.com/LiveUI/Boost",
-	"website": "https://github.com/LiveUI/Boost",
+	"website": "https://www.boostappstore.com",
 	"keywords": [
 		"boost",
 		"hockeyapp",
