temp demo apps & better file env vars

--- a/Boost.xcodeproj/xcshareddata/xcschemes/Run.xcscheme
+++ b/Boost.xcodeproj/xcshareddata/xcschemes/Run.xcscheme
@@ -114,7 +114,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "--port 9090"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
