--- a/Boost.xcodeproj/xcshareddata/xcschemes/ApiCoreTestTools.xcscheme
+++ b/Boost.xcodeproj/xcshareddata/xcschemes/ApiCoreTestTools.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0920"
+   LastUpgradeVersion = "0930"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Boost::ApiErrors"
-               BuildableName = "ApiErrors.framework"
-               BlueprintName = "ApiErrors"
+               BlueprintIdentifier = "Boost::ApiCoreTestTools"
+               BuildableName = "ApiCoreTestTools.framework"
+               BlueprintName = "ApiCoreTestTools"
                ReferencedContainer = "container:Boost.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,29 +26,9 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Boost::ApiErrorsTests"
-               BuildableName = "ApiErrorsTests.xctest"
-               BlueprintName = "ApiErrorsTests"
-               ReferencedContainer = "container:Boost.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Boost::ApiErrors"
-            BuildableName = "ApiErrors.framework"
-            BlueprintName = "ApiErrors"
-            ReferencedContainer = "container:Boost.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -56,7 +36,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -66,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Boost::ApiErrors"
-            BuildableName = "ApiErrors.framework"
-            BlueprintName = "ApiErrors"
+            BlueprintIdentifier = "Boost::ApiCoreTestTools"
+            BuildableName = "ApiCoreTestTools.framework"
+            BlueprintName = "ApiCoreTestTools"
             ReferencedContainer = "container:Boost.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -84,9 +63,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Boost::ApiErrors"
-            BuildableName = "ApiErrors.framework"
-            BlueprintName = "ApiErrors"
+            BlueprintIdentifier = "Boost::ApiCoreTestTools"
+            BuildableName = "ApiCoreTestTools.framework"
+            BlueprintName = "ApiCoreTestTools"
             ReferencedContainer = "container:Boost.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
