--- a/Boost.xcodeproj/xcshareddata/xcschemes/Boost-Package.xcscheme
+++ b/Boost.xcodeproj/xcshareddata/xcschemes/Boost-Package.xcscheme
@@ -168,6 +168,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Boost::Gravatar"
+               BuildableName = "Gravatar.framework"
+               BlueprintName = "Gravatar"
+               ReferencedContainer = "container:Boost.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "Boost::DbCore"
                BuildableName = "DbCore.framework"
                BlueprintName = "DbCore"
@@ -639,6 +653,16 @@
                BlueprintIdentifier = "Boost::DbCoreTests"
                BuildableName = "DbCoreTests.xctest"
                BlueprintName = "DbCoreTests"
+               ReferencedContainer = "container:Boost.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Boost::GravatarTests"
+               BuildableName = "GravatarTests.xctest"
+               BlueprintName = "GravatarTests"
                ReferencedContainer = "container:Boost.xcodeproj">
             </BuildableReference>
          </TestableReference>
