testing apps wip

--- a/Boost.xcodeproj/xcshareddata/xcschemes/Run.xcscheme
+++ b/Boost.xcodeproj/xcshareddata/xcschemes/Run.xcscheme
@@ -126,7 +126,7 @@
          <EnvironmentVariable
             key = "DB_LOGGING"
             value = "1"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "DB_NAME"
