--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -6,6 +6,8 @@ RUN \
     rm -rf /var/lib/apt/lists/*
 
 RUN \
+    apt-get update && \
+    apt-get install -y software-properties-common python-software-properties && \
     add-apt-repository ppa:openjdk-r/ppa && \
     apt-get update && \
     apt-get install -y openjdk-7-jdk && \
