--- a/Boost.xcodeproj/xcshareddata/xcschemes/Run.xcscheme
+++ b/Boost.xcodeproj/xcshareddata/xcschemes/Run.xcscheme
@@ -124,6 +124,11 @@
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
+            key = "JWT_SECRET"
+            value = "secret"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
             key = "DB_HOST"
             value = "localhost"
             isEnabled = "YES">
